<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/warnabghitam"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_marginTop="145dp"
        android:layout_gravity="center"
        android:background="@drawable/logo"
        android:contentDescription="@string/todo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/login_sebagai"
        android:textColor="#FCF2F2"/>
    
    <Button
        android:id="@+id/btn_awalkaryawan"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_bgbtn"
        android:text="@string/karyawan"/>
    <Button
        android:id="@+id/btn_awaladmin"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_bgbtn"
        android:text="@string/admin" />


</LinearLayout>