<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/warnabgUnggu"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".admin.listagenda.ListAgenda">
<LinearLayout
    android:layout_width="340dp"
    android:layout_height="130dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/ic_bglistagenda"
    android:layout_marginTop="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="Event">
        </TextView>
        <TextView
            android:id="@+id/tvid"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="........">
        </TextView>
        <TextView
            android:id="@+id/tveventadmin"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:text="........">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/lokasi">
        </TextView>
        <TextView
            android:id="@+id/tvlokasiadmin"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:text="@string/value">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/jam">
        </TextView>
        <TextView
            android:id="@+id/tvjamadmin"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:text="@string/value">
        </TextView>
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/hari_tgl">
        </TextView>

        <TextView
            android:id="@+id/tvhariadmin"
            android:layout_width="109dp"
            android:layout_height="20dp"
            android:text="@string/value"/>
        <TextView
            android:id="@+id/tvtgladmin"
            android:layout_width="109dp"
            android:layout_height="20dp"
            android:text="@string/value"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_editListAgenda"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginStart="0dp"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:background="@drawable/ic_bgbirumuda">
        </Button>
        <Button
            android:id="@+id/btn_hapusListAgenda"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:text="@string/hapus"
            android:textAllCaps="false"
            android:background="@drawable/ic_bg_merah">
        </Button>
        <Button
            android:id="@+id/btn_karjoinListAgenda"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:textAllCaps="false"
            android:text="@string/karyawan_join"
            android:background="@drawable/ic_bgbirumuda">
        </Button>
    </LinearLayout>

</LinearLayout>

</LinearLayout>