<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/warnabgUnggu"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".admin.listannoncment.ListAnnoncment">
    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="230dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/ic_bglistagenda"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_diskripsiann"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diskripsi">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_editlistannonc"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginStart="120dp"
                android:text="@string/edit"
                android:background="@drawable/ic_bgbirumuda">
            </Button>
            <Button
                android:id="@+id/btn_hapusListAnnon"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:text="@string/hapus"
                android:background="@drawable/ic_bg_merah">
            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>