<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/warnabgUnggu"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".admin.LoginAdmin">

    <LinearLayout
        android:layout_width="321dp"
        android:layout_height="360dp"
        android:orientation="vertical"
        android:background="@drawable/ic_bglogin"
        android:layout_marginTop="160dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="245dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/logounggu"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="11dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="By Admin" />

        
        <LinearLayout
            android:layout_width="287dp"
            android:layout_height="36dp"
            android:layout_marginTop="11dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_bg_ping">
            <EditText
                android:id="@+id/it_emailloginadmin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:background="@null"
                android:textStyle="italic"
                android:inputType="textEmailAddress"
                android:textColor="@color/warnabghitam"
                android:layout_marginStart="30dp"
                android:autofillHints="">

            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="287dp"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_bg_ping">

            <EditText
                android:id="@+id/it_passwdloginadmin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:background="@null"
                android:textStyle="italic"
                android:inputType="textPassword"
                android:textColor="@color/warnabghitam"
                android:layout_marginStart="30dp"
                android:autofillHints="" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_loginlayoutadmin"
            android:layout_width="134dp"
            android:layout_height="40dp"
            android:layout_marginTop="33dp"
            android:background="@drawable/ic_bgbiru"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textStyle="italic"
            android:textColor="#fff"
            android:layout_gravity="center"/>


    </LinearLayout>


</LinearLayout>