<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/warnabgUnggu"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".admin.listjoinadmin.ListChatGrup">

    <ImageView
        android:layout_width="340dp"
        android:layout_height="71dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="@drawable/logounggu"
        android:contentDescription="@string/todo" />
    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="450dp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/ic_bglogin">
        <EditText
            android:id="@+id/tv_namaTidaktampil"
            android:layout_width="0dp"
            android:layout_margin="0dp"
            android:text="@string/value"
            tools:ignore="Suspicious0dp"
            android:layout_height="0dp">

        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="22dp"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:text="List Karyawan Yg Join"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/nama_event"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="22dp"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:text="Nama"
            android:textColor="#000"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvlistkaryawanjoin"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <Button
            android:id="@+id/btn_OkListChatGrup"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_bgbirumuda"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/ok"
            />


    </LinearLayout>

</LinearLayout>